-----------------------------------------------------------------------
*** ecasound - changes and additions to libecasound interface       ***
-----------------------------------------------------------------------

2001-02-07  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-iamode-parser.h (enum Commands): moved from public to
	protected scope
	
2001-02-06  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-midi.h (various): many type changes
	
2000-12-13  Kai Vehmanen <kaiv@wakkanet.fi>
	
	* audiofx.h (EFFECT_DCFIX,EFFECT_PITCH_SHIFTER): moved to audiofx.h
	* audiofx_misc.h (EFFECT_AUDIO_STAMP): added
	* audiofx_impl.h (all): removed
	* stamp-ctrl.h (all): added
	* audio-stamp.h (all): added
	* generic-controller.h (source_pointer): added
	
2000-12-12  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-session.h (Engine_status): 'ep_status_error' added
	* eca-contol-interface.h (error): added

2000-12-10  Kai Vehmanen <kaiv@wakkanet.fi>

	* osc-gen.h (all): completely rewritten
	* osc-gen-file.h (all): added
	
2000-12-09  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-control-base.h (destructor): changed into non-virtual
	* eca-control-objects.h (destructor): changed into non-virtual
	* eca-control.h (destructor): changed into non-virtual
	* eca-control-interface.h (last_boolean): added
	* eca-chainsetup.h (constructor): new overloaded version added
	
2000-12-08  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-control.h (): now inherits ECA_CONTROL_OBJECTS directly
	* eca-contro-dump.h (): dropped inheritance of
	ECA_CONTROL_OBJECTS; now a non-virtual, concrete class
	* eca-chain.h (various): added support for selecting individual
	chainops, controllers and their parameters
	* eca-control-objects (all chainop and ctrl related routines):
	layout changes
	* eca-audio-objects (first_selected_chain): added
	
2000-12-07  Kai Vehmanen <kaiv@wakkanet.fi>

	* eca-operator.h (is_toggled, default_parameter_range): removed
	* eca-operator.h (parameter_description): added
	
2000-12-05  Kai Vehmanen <kaiv@wakkanet.fi>