@@ -139,7 +139,10 @@ void AUDIO_IO_BUFFERED::write_buffer(SAMPLE_BUFFER* sbuf) {
 
 AUDIO_IO_DEVICE::AUDIO_IO_DEVICE(void) 
   : is_running_rep(false),
-    is_prepared_rep(false) { }
+    is_prepared_rep(false),
+    ignore_xruns_rep(true),
+    max_buffers_rep(true) 
+{ }
 
 AUDIO_IO_DEVICE::~AUDIO_IO_DEVICE(void) { }
 
